--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "common-manager",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "服务注册相关",
-  "main": "dist/client.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
